; ModuleID = '/home/carl/AnghaBench/git/compat/extr_mingw.c_mingw_getaddrinfo.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_mingw.c_mingw_getaddrinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mingw_getaddrinfo(i8* %0, i8* %1, %struct.addrinfo* %2, %struct.addrinfo** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.addrinfo*, align 8
  %8 = alloca %struct.addrinfo**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.addrinfo* %2, %struct.addrinfo** %7, align 8
  store %struct.addrinfo** %3, %struct.addrinfo*** %8, align 8
  %9 = call i32 (...) @ensure_socket_initialization()
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load %struct.addrinfo*, %struct.addrinfo** %7, align 8
  %13 = load %struct.addrinfo**, %struct.addrinfo*** %8, align 8
  %14 = call i32 @getaddrinfo(i8* %10, i8* %11, %struct.addrinfo* %12, %struct.addrinfo** %13)
  ret i32 %14
}

declare dso_local i32 @ensure_socket_initialization(...) #1

declare dso_local i32 @getaddrinfo(i8*, i8*, %struct.addrinfo*, %struct.addrinfo**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
